# oqyoqy-backend

./: Dockerfile  pyproject.toml  requirements.txt
src/: main.py
src/database/: models.py
