[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mindoolla1289 <mindoolla1289@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
aerich = "^0.7.1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
